--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+iiiii
 Dependencies:
 
 See package.json. Install the latest version of mongodb native driver from git, as 0.8.0 isn't available via npm yet.
